@@ -26,6 +26,7 @@ LINTABLE_TESTS = \
 	test/coveragetest.py \
 	test/test_api.py \
 	test/test_cmdline.py \
+	test/test_codeunit.py \
 	test/test_data.py \
 	test/test_execfile.py \
 	test/test_farm.py \
